--- a/src/scss/foundation/_var.scss
+++ b/src/scss/foundation/_var.scss
@@ -1,93 +1,77 @@
 //フォント ---------------------------------
 //ゴシック
-$gothic: '游ゴシック', YuGothic, 'ヒラギノ角ゴ Pro',
-  'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', sans-serif;
+$gothic: '游ゴシック', YuGothic, 'ヒラギノ角ゴ Pro', 'Hiragino Kaku Gothic Pro',
+  'メイリオ', 'Meiryo', sans-serif;
 // 明朝
 $mincho: '游明朝', YuMincho, 'Noto Serif JP', 'ヒラギノ明朝 ProN W3',
   'Hiragino Mincho ProN', 'HG明朝E', 'ＭＳ Ｐ明朝', 'ＭＳ 明朝', serif;
 
 //色 -------------------------------------
-$blue: #3f80e0;
-$black: #363636;
-$black02: #414040;
+// $blue: #8bb5c9;
+$blue: #77abc4;
+$black: #000000;
 $white: #fff;
-$grey: #8a7974;
-$grey02: #e6e6e6;
-$grey03: #f1efee;
-$grey04: #d1d1d1;
-$grey05: #f6f6f6;
-$brown: #330c0083;
-$brown02: #a38572;
-$brown03: #6a1d00;
-$red: #a12a2a;
+$grey: #e8e8e8;
+$red: #c3334b;
+$orange: #db9749;
+
+$pale-pink: #fff4f2;
+$pink: #fc5d7f;
+$cherry: #ae0f0f;
 // $brown04: #ded6d4;
 
-$main-c: $brown; //メインカラー
-$base-c: $grey02; //ベースカラー
-$accent-c: $brown02; //アクセントカラー
-$border-c: $grey02;
-$border02-c: $grey04;
-// $border02-c: $brown04;
-$bg-c: $grey05;
-$footer-c: $black02;
-// $num-c: $grey03;
+// 配色　Winter用
+$w-main-c: $blue; //メインカラー
+$w-base-c: $grey; //ベースカラー
+$w-accent-c: $red; //アクセントカラー
+$w-accent02-c: $orange;
+
+// 配色　桜用
+// $s-main-c: $blue; //メインカラー
+$s-base-c: $pale-pink; //ベースカラー
+$s-accent-c: $pink; //アクセントカラー
+$s-accent02-c: $cherry;
 
 //コンテンツ幅 ----------------------------
-$content-width: 1250px;
-$content-width-sm: 850px;
+$content-width: 640px;
 
 //ブロック間余白 --------------------------
 $block-padding: 30px;
-$block-padding_pc: 60px;
 
 //ヘッダー高さ --------------------------
 $header-height: 70px;
-$header-height_pc: 120px;
+$header-height--pc: 120px;
 
 //ベースフォントサイズ ---------------------
 $base-font-size: 16;
 
 //ブレークポイント ------------------------
-// $win-xs: 320px;//スマホ（小）iphone SEなど
-// $win-sm: 500px;//スマホ
-// $win-md: 768px;// タブレット（小）
-// $win-sub: 832px;// タブレット（中）　ipad
-// $win-lg: 1024px;// タブレット（大）ipad pro
-// $win-xl: 1200px;// PC コンテンツ幅のmax-width
-
-$win_xs: 320px; // スマホ（小）iphone SEなど
-$win_ss: 500px;
-$win_s: 768px; // SP ~ tab
-$win_m: 1024px; // tab ~ PC
-$win_l: $content-width; // PC版コンテンツ幅
-
 $breakpoints: (
-  'sp': 'screen and (min-width:' +
-    (
-      $win_xs + 1,
-    )+ ')',
-  'sp_up': 'screen and (min-width:' +
-    (
-      $win_ss + 1,
-    )+ ')',
-  'tab': 'screen and (min-width:' +
-    (
-      $win_s + 1,
-    )+ ')',
-  'pc': 'screen and (min-width:' +
-    (
-      $win_m + 1,
-    )+ ')',
-  'cont': 'screen and (min-width:' +
-    (
-      $win_l + 1,
-    )+ ')',
+  'sm': 'screen and (min-width: 640px)',
+  'md': 'screen and (min-width: 768px)',
+  'lg': 'screen and (min-width: 1024px)',
+  'xl': 'screen and (min-width: 1280px)',
 ) !default;
 
-@mixin mq($breakpoint: tab) {
+@mixin mq($breakpoint: sm) {
   @media #{map-get($breakpoints, $breakpoint)} {
     @content;
   }
 }
-// @include mq(){}
 
+// $breakpoints: (
+//   'sp': 'screen and (min-width: 640px)',
+//   'sp_up': 'screen and (min-width:768px)',
+//   'tab': 'screen and (min-width:' +
+//     (
+//       $win_s + 1,
+//     )+ ')',
+//   'pc': 'screen and (min-width:' +
+//     (
+//       $win_m + 1,
+//     )+ ')',
+//   'cont': 'screen and (min-width:' +
+//     (
+//       $win_l + 1,
+//     )+ ')',
+// ) !default;
