--- a/src/scss/layout/_l-header.scss
+++ b/src/scss/layout/_l-header.scss
@@ -8,9 +8,9 @@
   padding: 5px 3vw;
   // transition: 0.6s;
   @include mq() {
-    height: $header-height_pc;
+    height: $header-height--pc;
     padding: 10px 0;
   }
-//   &.is-scroll {
-//   }
-// }
+  //   &.is-scroll {
+  //   }
+}
