--- a/src/scss/object/utility/_u-margin-padding.scss
+++ b/src/scss/object/utility/_u-margin-padding.scss
@@ -1,21 +1,21 @@
 // 余白の種類はS,M,Lなどの抽象的な命名をする
-//【NG例】.u-mt-10{margin-top:10px !important;}　←これはだめ
-.u-mt-xs {
+//【NG例】.u-mt--10{margin-top:10px !important;}　←これはだめ
+.u-mt--xs {
   margin-top: 5px !important;
 }
-.u-mt-s {
+.u-mt--s {
   margin-top: 8px !important;
 }
-.u-mt-m {
+.u-mt--m {
   margin-top: 15px !important;
 }
-.u-mt-l {
+.u-mt--l {
   margin-top: 30px !important;
 }
-.u-mt-ll {
+.u-mt--ll {
   margin-top: 35px !important;
 }
-.u-mt-xl {
+.u-mt--xl {
   margin-top: 40px !important;
 }
 .u-mx-s {
@@ -26,22 +26,22 @@
   margin-left: 10px !important;
 }
 @include mq() {
-  .u-mt-s {
+  .u-mt--s {
     margin-top: 7px !important;
   }
-  .u-mt-s {
+  .u-mt--s {
     margin-top: 10px !important;
   }
-  .u-mt-m {
+  .u-mt--m {
     margin-top: 20px !important;
   }
-  .u-mt-l {
+  .u-mt--l {
     margin-top: 40px !important;
   }
-  .u-mt-ll {
+  .u-mt--ll {
     margin-top: 60px !important;
   }
-  .u-mt-xl {
+  .u-mt--xl {
     margin-top: 80px !important;
   }
   .u-ml-m {
@@ -69,7 +69,7 @@
   padding-top: $header-height;
   margin-top: -$header-height;
   @include mq() {
-    padding-top: $header-height_pc;
-    margin-top: -$header-height_pc;
+    padding-top: $header-height--pc;
+    margin-top: -$header-height--pc;
   }
 }
